# trajectoriz

./: CHANGELOG.md  README.md  bench_search.py  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
tests/: test_cli.py  test_fts.py  test_trajectoriz.py
trajectoriz/: __init__.py  _fts.py  _search.py  cli.py
trajectoriz.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
trajectoriz/_recoll/: mimeconf  mimemap
trajectoriz/_recoll/filters/: rcltraj.py
