[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectoriz"
version = "0.1.0"
description = "Locate agent trajectory files on the local machine"
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["trajectoriz*"]
