[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "trajectoriz"
version = "0.1.0"
description = "Locate agent trajectory files on the local machine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
trajectoriz-cli = "trajectoriz.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["trajectoriz*"]
